--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,5 +17,6 @@ jobs:
       - uses: actions/setup-python@v2
         with:
           python-version: 3.9
+      - run: git submodule --init --recursive
       - run:  pip install -r requirements.txt
       - run:  pytest
