--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,6 +17,7 @@ jobs:
       - uses: actions/setup-python@v2
         with:
           python-version: 3.9
-      - run: git submodule --init --recursive
-      - run:  pip install -r requirements.txt
-      - run:  pytest
+      - run: git submodule init
+      - run: git submodule update --recursive --remote
+      - run: pip install -r requirements.txt
+      - run: pytest
