--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,16 +1,12 @@
 # This is a basic workflow to help you get started with Actions
-
 name: CI
-
 # Controls when the action will run. 
 on: [push]
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   build:
     # The type of runner that the job will run on
-    runs-on: ubuntu-latest
-
-    # Steps represent a sequence of tasks that will be executed as part of the job
+    runs-on: ubuntu-latest    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       - name: Checkout
         uses: actions/checkout@v2
@@ -21,7 +17,5 @@ jobs:
       - uses: actions/setup-python@v2
         with:
           python-version: 3.9
-      - run: git submodule init
-      - run: git submodule update --recursive --remote
       - run: pip install -r requirements.txt
       - run: python -m pytest
