--- a/tests/x86_perf/CMakeLists.txt
+++ b/tests/x86_perf/CMakeLists.txt
@@ -39,11 +39,30 @@ set_target_properties(
 target_include_directories(
     avx2_sgemm_6x16 INTERFACE "${SGEMM_INCLUDE_DIR}")
 
+##########################################################
+# Get test-harness-built SYS_TL sgemm kernel
+find_library(
+    SGEMM_FULL_LIBRARY test_avx2_sgemm_full.so REQUIRED
+    PATHS "${CMAKE_CURRENT_SOURCE_DIR}/../tmp/"
+)
+
+find_path(
+    SGEMM_FULL_INCLUDE_DIR test_avx2_sgemm_full.h REQUIRED
+    PATHS "${CMAKE_CURRENT_SOURCE_DIR}/../tmp/"
+)
+
+add_library(avx2_sgemm_full IMPORTED SHARED)
+set_target_properties(
+    avx2_sgemm_full PROPERTIES IMPORTED_LOCATION "${SGEMM_FULL_LIBRARY}")
+target_include_directories(
+    avx2_sgemm_full INTERFACE "${SGEMM_FULL_INCLUDE_DIR}")
+
 
 ##########################################################
 # Build main benchmark
 add_executable(run benchmark.cpp)
 target_link_libraries(
-    run PRIVATE avx2_sgemm_6x16 PkgConfig::blis benchmark::benchmark)
+    run PRIVATE avx2_sgemm_6x16 avx2_sgemm_full
+                PkgConfig::blis benchmark::benchmark)
 target_compile_options(
     run PRIVATE $<$<CXX_COMPILER_ID:GNU,Clang>:-march=skylake>)
