--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,9 +13,9 @@ jobs:
         with:
           token: ${{ secrets.MY_REPO_PAT }}
           submodules: recursive
-      - uses: actions/checkout@v2
       - uses: actions/setup-python@v2
         with:
           python-version: 3.9
+      - run: python -m pip install -U pip wheel
       - run: pip install -r requirements.txt
       - run: python -m pytest
