--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,12 +1,18 @@
 # This is a basic workflow to help you get started with Actions
 name: CI
-# Controls when the action will run. 
-on: [push]
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
+# Controls when the action will run.
+on: [ push ]
+# A workflow run is made up of one or more jobs that can run sequentially or in
+# parallel
 jobs:
   build:
+    strategy:
+      matrix:
+        runner: [ ubuntu-latest, macos-latest ]
     # The type of runner that the job will run on
-    runs-on: ubuntu-latest    # Steps represent a sequence of tasks that will be executed as part of the job
+    runs-on: ${{matrix.runner}}
+    # Steps represent a sequence of tasks that will be executed as part of the
+    # job
     steps:
       - name: Checkout
         uses: actions/checkout@v2
