--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "SYS_ATL/asdl"]
-	path = SYS_ATL/asdl
+[submodule "dependencies/asdl"]
+	path = dependencies/asdl
 	url = git@github.com:ChezJrk/asdl.git
