--- a/setup.cfg
+++ b/setup.cfg
@@ -4,7 +4,7 @@ version = attr: SYS_ATL.__version__
 include_package_data = True
 
 [options]
-packages = SYS_ATL
+packages = find:
 install_requires =
     astor==0.8.1
     numpy==1.21.2
@@ -12,9 +12,14 @@ install_requires =
     yapf==0.31.0
     adt==0.0.1
 
+[options.packages.find]
+exclude = tests
+
 [options.package_data]
 SYS_ATL =
     cmake/*
+SYS_ATL.libs =
+    *.c
 
 [options.entry_points]
 console_scripts =
