--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,27 +1,48 @@
-# This is a basic workflow to help you get started with Actions
 name: CI
-# Controls when the action will run.
 on: [ push ]
-# A workflow run is made up of one or more jobs that can run sequentially or in
-# parallel
 jobs:
   build:
     strategy:
       matrix:
         runner: [ ubuntu-latest, macos-latest ]
-    # The type of runner that the job will run on
     runs-on: ${{matrix.runner}}
-    # Steps represent a sequence of tasks that will be executed as part of the
-    # job
     steps:
-      - name: Checkout
+      - name: Checkout sources (including submodules)
         uses: actions/checkout@v2
         with:
           token: ${{ secrets.MY_REPO_PAT }}
           submodules: recursive
-      - uses: actions/setup-python@v2
+
+      - name: Setup Python environment
+        uses: actions/setup-python@v2
         with:
           python-version: 3.9
-      - run: python -m pip install -U pip wheel
-      - run: pip install -r requirements.txt
-      - run: python -m pytest
+
+      - name: Install Python dependencies
+        run: |
+          python -m pip install -U pip wheel
+          pip install -r requirements.txt
+
+      - name: Get latest CMake and ninja
+        uses: lukka/get-cmake@latest
+
+      - name: Setup SDE binaries
+        uses: petarpetrovt/setup-sde@v1.2
+
+      - name: Run unit tests
+        run: python -m pytest
+
+      - name: Build package
+        run: python -m build
+
+      - name: Install package
+        run: pip install dist/*.whl
+
+      - name: Build apps with CMake
+        run: |
+          cmake -G Ninja -S apps -B build --preset gha-${{ runner.os }}
+          cmake --build build
+
+      - name: Check apps run with CMake
+        run: ctest --output-on-failure
+        working-directory: build
