--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -8,3 +8,6 @@ include setup.py
 
 # Include CMake support files
 recursive-include SYS_ATL/cmake *
+
+# Include C source resources from SYS_ATL.libs
+recursive-include SYS_ATL/libs *
