--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 asdl==0.1.5
 astor==0.8.1
+build==0.7.0
 jupyter-contrib-nbextensions==0.5.1
 numpy==1.21.2
 Pillow==8.3.2
@@ -8,6 +9,7 @@ pytest==6.2.5
 pytest-cov==3.0.0
 scipy==1.7.1
 sympy==1.9
+tox==3.24.4
 yapf==0.31.0
 z3-solver==4.8.12.0
 
