Add ssyrk MKL benchmark

--- a/apps/x86_demo/CMakeLists.txt
+++ b/apps/x86_demo/CMakeLists.txt
@@ -46,4 +46,4 @@ find_package(benchmark REQUIRED)
 add_subdirectory(conv)
 add_subdirectory(resnet)
 add_subdirectory(sgemm)
-add_subdirectory(syrk)
+add_subdirectory(ssyrk)
