Benchmark SYS_ATL (partial) conv

--- a/apps/x86_demo/conv/CMakeLists.txt
+++ b/apps/x86_demo/conv/CMakeLists.txt
@@ -1,10 +1,17 @@
 # ---------------------------------------------------------------------------- #
+# SYS_ATL libraries
+
+add_sys_atl_library(conv conv.py)
+
+
+# ---------------------------------------------------------------------------- #
 # Test harness
 
 add_executable(bench_conv bench_conv.cpp)
 target_link_libraries(
   bench_conv
   PRIVATE
+  x86_demo::conv
   DNNL::dnnl
   benchmark::benchmark_main
 )
