Get basic correctness check... TODO: share code

--- a/apps/x86_demo/conv/CMakeLists.txt
+++ b/apps/x86_demo/conv/CMakeLists.txt
@@ -16,3 +16,12 @@ target_link_libraries(
   benchmark::benchmark_main
 )
 target_compile_features(bench_conv PRIVATE cxx_std_17)
+
+add_executable(test_conv test_conv.cpp)
+target_link_libraries(
+  test_conv
+  PRIVATE
+  x86_demo::conv
+  DNNL::dnnl
+)
+target_compile_features(test_conv PRIVATE cxx_std_17)
