--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -42,6 +42,12 @@ jobs:
         run: pip install dist/*.whl
 
       # Skip running on macOS since the SDE simulator is too slow there
+      - name: Install apps deps
+        if: runner.os == 'Linux'
+        run: |
+          sudo apt update
+          sudo apt install g++-11
+
       - name: Build apps with CMake
         if: runner.os == 'Linux'
         run: ./apps/build.sh
