--- a/apps/x86_demo/sgemm/CMakeLists.txt
+++ b/apps/x86_demo/sgemm/CMakeLists.txt
@@ -21,6 +21,21 @@ target_link_libraries(
 )
 target_compile_features(bench_sgemm PRIVATE cxx_std_17)
 
+find_package(PkgConfig REQUIRED)
+pkg_check_modules(OpenBLAS REQUIRED IMPORTED_TARGET
+                  openblas)
+
+add_executable(bench_sgemm_openblas bench_sgemm.cpp)
+target_link_libraries(
+  bench_sgemm_openblas
+  PRIVATE
+  x86_demo::sgemm
+  benchmark::benchmark_main
+  PkgConfig::OpenBLAS
+  alex_sgemm
+)
+target_compile_features(bench_sgemm_openblas PRIVATE cxx_std_17)
+
 # ---------------------------------------------------------------------------- #
 # CTest configuration
 
