Factor out SYS_ATL wrapper

--- a/apps/x86_demo/conv/CMakeLists.txt
+++ b/apps/x86_demo/conv/CMakeLists.txt
@@ -7,9 +7,10 @@ add_sys_atl_library(conv conv.py)
 # ---------------------------------------------------------------------------- #
 # OneDNN Conv common libraries
 
-add_library(onednn_conv OBJECT onednn_conv.cpp)
-target_link_libraries(onednn_conv PUBLIC DNNL::dnnl)
-target_compile_features(onednn_conv PRIVATE cxx_std_17)
+add_library(conv_impls OBJECT sys_atl_conv.cpp onednn_conv.cpp)
+target_link_libraries(conv_impls PUBLIC DNNL::dnnl PRIVATE x86_demo::conv)
+target_compile_features(conv_impls PUBLIC cxx_std_17)
+
 
 # ---------------------------------------------------------------------------- #
 # Test harness
@@ -18,9 +19,8 @@ add_executable(bench_conv bench_conv.cpp)
 target_link_libraries(
   bench_conv
   PRIVATE
-  x86_demo::conv
   benchmark::benchmark_main
-  onednn_conv
+  conv_impls
 )
 target_compile_features(bench_conv PRIVATE cxx_std_17)
 
@@ -28,8 +28,6 @@ add_executable(test_conv test_conv.cpp)
 target_link_libraries(
   test_conv
   PRIVATE
-  x86_demo::conv
-  DNNL::dnnl
-  onednn_conv
+  conv_impls
 )
 target_compile_features(test_conv PRIVATE cxx_std_17)
