--- a/apps/x86_demo/conv/CMakeLists.txt
+++ b/apps/x86_demo/conv/CMakeLists.txt
@@ -1,14 +1,24 @@
 # ---------------------------------------------------------------------------- #
-# SYS_ATL libraries
+# Conv implementations
 
+find_package(Halide REQUIRED)
+
+## SYS_ATL
 add_sys_atl_library(conv conv.py)
 
+## Halide
+add_executable(halide_conv.gen halide_conv_gen.cpp)
+target_link_libraries(halide_conv.gen PRIVATE Halide::Generator)
 
-# ---------------------------------------------------------------------------- #
-# OneDNN Conv common libraries
+add_halide_library(halide_conv_kernel FROM halide_conv.gen)
 
-add_library(conv_impls OBJECT sys_atl_conv.cpp onednn_conv.cpp)
-target_link_libraries(conv_impls PUBLIC DNNL::dnnl PRIVATE x86_demo::conv)
+## Common object library
+add_library(conv_impls OBJECT sys_atl_conv.cpp onednn_conv.cpp halide_conv.cpp)
+target_link_libraries(
+  conv_impls
+  PUBLIC DNNL::dnnl
+  PRIVATE x86_demo::conv halide_conv_kernel
+)
 target_compile_features(conv_impls PUBLIC cxx_std_17)
 
 
