--- a/apps/x86_demo/conv/CMakeLists.txt
+++ b/apps/x86_demo/conv/CMakeLists.txt
@@ -10,7 +10,8 @@ add_sys_atl_library(conv conv.py)
 add_executable(halide_conv.gen halide_conv_gen.cpp)
 target_link_libraries(halide_conv.gen PRIVATE Halide::Generator)
 
-add_halide_library(halide_conv_kernel FROM halide_conv.gen)
+add_halide_library(halide_conv_kernel FROM halide_conv.gen
+                   STMT_HTML _)
 
 ## Common object library
 add_library(conv_impls OBJECT sys_atl_conv.cpp onednn_conv.cpp halide_conv.cpp)
