Set up Codecov.io on CI. Remove redundant tox/pytest.

--- a/tox.ini
+++ b/tox.ini
@@ -4,7 +4,8 @@ envlist = py39
 [testenv]
 deps =
     pytest
+    pytest-cov
     -r{toxinidir}/requirements.txt
-commands = pytest
+commands = pytest --cov=./ --cov-report=xml
 passenv =
     SDE_PATH
