--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,7 +1,7 @@
 name: CI
 on:
   push:
-    branches: master
+    branches: [ 'master' ]
   pull_request:
 jobs:
   build:
@@ -26,13 +26,13 @@ jobs:
       - name: Install Python dependencies
         run: |
           python -m pip install -U pip wheel
-          pip install -r requirements.txt
-
-      - name: Get latest CMake and ninja
-        uses: lukka/get-cmake@latest
-
-      - name: Setup SDE binaries
-        uses: petarpetrovt/setup-sde@v1.2
+          python -m pip install tox==3.24.5
+#
+#      - name: Get latest CMake and ninja
+#        uses: lukka/get-cmake@latest
+#
+#      - name: Setup SDE binaries
+#        uses: petarpetrovt/setup-sde@v1.2
 
       - name: Install Clang 13
         run: |
@@ -40,17 +40,20 @@ jobs:
           chmod +x llvm.sh
           sudo ./llvm.sh 13
 
-      - name: Run PyTest
-        run: python -m pytest
-
       - name: Run tox
         run: tox
 
-      - name: Build package
-        run: python -m build
+#      - name: Build package
+#        run: python -m build
+#
+#      - name: Install package
+#        run: pip install dist/*.whl
 
-      - name: Install package
-        run: pip install dist/*.whl
+      - name: Upload coverage to Codecov
+        uses: codecov/codecov-action@v2
+        with:
+          fail_ci_if_error: true
+          token: ${{ secrets.CODECOV_TOKEN }}
 
 #       # Skip running on macOS since the SDE simulator is too slow there
 #       - name: Install apps deps
