--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,10 +27,10 @@ jobs:
         run: |
           python -m pip install -U pip wheel
           python -m pip install tox==3.24.5
-#
-#      - name: Get latest CMake and ninja
-#        uses: lukka/get-cmake@latest
-#
+
+      - name: Get latest CMake and ninja
+        uses: lukka/get-cmake@v3.21.2
+
       - name: Setup SDE binaries
         uses: petarpetrovt/setup-sde@v1.2
 
