Add unscheduled SSYRK

--- a/apps/x86_demo/CMakeLists.txt
+++ b/apps/x86_demo/CMakeLists.txt
@@ -39,6 +39,8 @@ find_package(dnnl REQUIRED)
 ## Google Benchmark
 find_package(benchmark REQUIRED)
 
+## Google Test
+find_package(GTest REQUIRED)
 
 # ---------------------------------------------------------------------------- #
 # Benchmarks
