--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,6 +32,7 @@ jobs:
         uses: actions/setup-python@v2
         with:
           python-version: 3.9
+          cache: 'pip'
 
       - name: Install Python dependencies
         run: |
