--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,10 +7,20 @@ jobs:
   build:
     strategy:
       matrix:
-        runner: [ ubuntu-latest ]
+        runner: [ ubuntu-latest, macos-latest ]
+        include:
+          - runner: ubuntu-latest
+            CC: clang-13
+            CXX: clang++-13
+            CLANG: clang-13
+          - runner: macos-latest
+            CC: clang # This will be system AppleClang
+            CXX: clang++ # This will be system AppleClang
+            CLANG: /usr/local/opt/llvm/bin/clang
     env:
-      CC: clang-13
-      CXX: clang++-13
+      CC: ${{matrix.CC}}
+      CXX: ${{matrix.CXX}}
+      CLANG: ${{matrix.CLANG}}
     runs-on: ${{matrix.runner}}
     steps:
       - name: Checkout sources (including submodules)
@@ -22,6 +32,7 @@ jobs:
         uses: actions/setup-python@v2
         with:
           python-version: 3.9
+          cache: 'pip'
 
       - name: Install Python dependencies
         run: |
@@ -32,13 +43,19 @@ jobs:
         uses: lukka/get-cmake@v3.21.2
 
       - name: Setup SDE binaries
+        if: runner.os != 'macOS'
         uses: petarpetrovt/setup-sde@v1.2
 
-      - name: Install Clang 13
+      - name: Install Clang 13 (Linux)
+        if: runner.os == 'Linux'
         run: |
           wget https://apt.llvm.org/llvm.sh
           chmod +x llvm.sh
           sudo ./llvm.sh 13
+
+      - name: Install Clang 13 (macOS)
+        if: runner.os == 'macOS'
+        run: brew install llvm@13
 
       - name: Run tox
         run: tox
