--- a/setup.cfg
+++ b/setup.cfg
@@ -10,7 +10,7 @@ install_requires =
     numpy==1.21.2
     PySMT==0.9.0
     yapf==0.31.0
-    adt==0.0.1
+    asdl_adt==0.1.0
 
 [options.packages.find]
 exclude = tests
