--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 Pillow==9.0.0
 PySMT==0.9.0
+asdl-adt==0.1.0
 asdl==0.1.5
 astor==0.8.1
 build==0.7.0
@@ -14,5 +15,3 @@ torch==1.10.1
 tox==3.24.4
 yapf==0.31.0
 z3-solver==4.8.12.0
-
--e dependencies/asdl
