--- a/setup.cfg
+++ b/setup.cfg
@@ -6,11 +6,11 @@ include_package_data = True
 [options]
 packages = find:
 install_requires =
+    PySMT==0.9.0
+    asdl-adt==0.1.0
     astor==0.8.1
     numpy==1.21.2
-    PySMT==0.9.0
     yapf==0.31.0
-    asdl_adt==0.1.0
 
 [options.packages.find]
 exclude = tests
