Use "exo" instead of "exo-lang" where possible.

--- a/setup.cfg
+++ b/setup.cfg
@@ -4,7 +4,7 @@ version = attr: exo.__version__
 description = Exo: Exocompiled Array Language
 long_description = file: README.md
 long_description_content_type = text/markdown
-home_page = https://github.com/VCLS/exo-lang
+home_page = https://github.com/ChezJRK/exo
 ;author = VCLS (Visual Computing Languages & Systems)
 ;author_email = TBD
 maintainer = Alex Reinking
