--- a/setup.cfg
+++ b/setup.cfg
@@ -42,6 +42,7 @@ install_requires =
     astor==0.8.1
     numpy==1.21.2
     yapf==0.31.0
+    z3-solver==4.8.12.0
 
 [options.packages.find]
 where = src
