Fix up dependency version info in package and tox.

--- a/setup.cfg
+++ b/setup.cfg
@@ -37,12 +37,12 @@ packages = find:
 package_dir =
     =src
 install_requires =
-    PySMT==0.9.0
-    asdl-adt==0.1.0
-    astor==0.8.1
-    numpy==1.21.2
-    yapf==0.31.0
-    z3-solver==4.8.12.0
+    PySMT>=0.9
+    asdl-adt>=0.1,<0.2
+    astor>=0.8
+    numpy>=1.21.2
+    yapf>=0.31
+    z3-solver>=4.8.12.0
 
 [options.packages.find]
 where = src
