--- a/tox.ini
+++ b/tox.ini
@@ -3,9 +3,13 @@ envlist = py39
 
 [testenv]
 deps =
+    # This list is maintained separately from requirements.txt to make it
+    # harder to accidentally forget a package dependency in setup.cfg.
+    Pillow
     pytest
     pytest-cov
-    -r{toxinidir}/requirements.txt
+    scipy
+    torch
 commands = pytest --cov=./ --cov-report=xml
 passenv =
     SDE_PATH
