--- a/tox.ini
+++ b/tox.ini
@@ -10,6 +10,6 @@ deps =
     pytest-cov
     scipy
     torch
-commands = pytest --cov=./ --cov-report=xml
+commands = pytest --cov=./ --cov-report=xml -o pythonpath=
 passenv =
     SDE_PATH
