--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -60,30 +60,53 @@ jobs:
       - name: Run tox
         run: tox
 
-#      - name: Build package
-#        run: python -m build
-#
-#      - name: Install package
-#        run: pip install dist/*.whl
-
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v2
         with:
           fail_ci_if_error: true
           token: ${{ secrets.CODECOV_TOKEN }}
 
-#       # Skip running on macOS since the SDE simulator is too slow there
-#       - name: Install apps deps
-#         if: runner.os == 'Linux'
-#         run: |
-#           sudo apt update
-#           sudo apt install g++-11
+  gemmini:
+    runs-on: ubuntu-latest
 
-#       - name: Build apps with CMake
-#         if: runner.os == 'Linux'
-#         run: ./apps/build.sh
+    container:
+      image: ghcr.io/exo-lang/gemmini:latest
+      credentials:
+        username: ${{ github.actor }}
+        password: ${{ secrets.github_token }}
 
-#       - name: Check apps run with CMake
-#         if: runner.os == 'Linux'
-#         run: ctest --output-on-failure
-#         working-directory: build
+    steps:
+      - uses: actions/checkout@v3
+      - uses: actions/checkout@v3
+        with:
+          repository: exo-lang/gemmini-rocc-tests
+          ref: exo
+          submodules: recursive
+          path: gemmini-rocc-tests
+
+      - uses: actions/setup-python@v2
+
+      - name: Generate code with Exo
+        run: |
+          python -m pip install -r requirements.txt
+          pytest tests/gemmini/matmul/test_gemmini_matmul.py tests/gemmini/conv/test_gemmini_conv.py
+
+      - name: Build GEMMINI tests
+        run: ./build.sh
+        env:
+          # TODO: these need to be fixed rather than removed, but there are so many that the logs are not interpretable
+          CFLAGS: -Wno-pointer-to-int-cast -Wno-discarded-qualifiers -Wno-int-to-pointer-cast -I ${{github.workspace}}/tests/gemmini/gemmini_build -I ${{github.workspace}}/src/exo/libs
+        working-directory: gemmini-rocc-tests
+
+      - name: Run GEMMINI tests
+        run: |
+          spike --extension=gemmini tiled_matmul_ws-baremetal
+          spike --extension=gemmini tiled_matmul_ws-2-baremetal
+          spike --extension=gemmini tiled_matmul_ws-3-baremetal
+          spike --extension=gemmini tiled_matmul_ws-4-baremetal
+          spike --extension=gemmini tiled_matmul_ws-5-baremetal
+          spike --extension=gemmini tiled_matmul_ws-6-baremetal
+          spike --extension=gemmini conv-baremetal
+          spike --extension=gemmini conv-2-baremetal
+          spike --extension=gemmini conv-3-baremetal
+        working-directory: gemmini-rocc-tests/build/bareMetalC
