--- a/.github/workflows/gemmini.yml
+++ b/.github/workflows/gemmini.yml
@@ -20,6 +20,8 @@ jobs:
 
       - name: Install dependencies
         run: |
+          apt-get remove -y cmake
+          apt-get install -y ninja-build
           python -m pip install -r requirements.txt
           python -m pip install cmake build
           python -m build
