Consolidate exo code.

--- a/apps/gemmini/src/CMakeLists.txt
+++ b/apps/gemmini/src/CMakeLists.txt
@@ -7,6 +7,6 @@ add_subdirectory(common)
 # ---------------------------------------------------------------------------- #
 # Exo implementations
 
-add_exo_library(gemmini_lib conv/conv.py matmul/matmul.py)
+add_exo_library(gemmini_lib exo/conv.py exo/matmul.py)
 target_include_directories(gemmini_lib SYSTEM PRIVATE "${gemmini-rocc-tests_SOURCE_DIR}")
 target_link_libraries(gemmini_lib PRIVATE exo-gemmini::helpers)
